# qml3dplayer

./: CMakeLists.txt  customtexture.cpp  customtexture.h  customtextureimage.cpp  customtextureimage.h  framedatagenerator.cpp  framedatagenerator.h  main.cpp  main.qml  playervideosurface.cpp  playervideosurface.h  qml.qrc  videoplayer.cpp  videoplayer.h
